--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-asgiref==3.7.2
-Django==4.0.6
-djangorestframework==3.13.1
+asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+coreapi==2.3.3
+coreschema==0.0.4
+Django==5.1.4
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+idna==3.10
+itypes==1.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 python-dotenv==1.0.1
-pytz==2024.2
-sqlparse==0.4.4
-typing_extensions==4.8.0
+requests==2.32.3
+setuptools==75.6.0
+sqlparse==0.5.2
+uritemplate==4.1.1
+urllib3==2.2.3
