--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
 name: Deploy pythonanywhere webapp
+
 on: [push]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -11,6 +13,6 @@ jobs:
         uses: umuttopalak/pythonanywhere-deploy-action@v1.1.0
         with:
           host: 'www.pythonanywhere.com' or 'www.eu.pythonanywhere.com'
-          username: {{ secrets.USERNAME }}
-          api_token: {{ secrets.API_TOKEN }}
-          domain_name: {{ secrets.DOMAIN_NAME }}
+          username: ${{ secrets.USERNAME }}
+          api_token: ${{ secrets.API_TOKEN }}
+          domain_name: ${{ secrets.DOMAIN_NAME }}
