Modifica la configuración del host en el archivo de github actions Borra la configuración para pythonanywhere eu, y deja solo un string como configuración para el host 'www.pythonanywhere.com'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Re-Deploy Pythonanywhere Django API
         uses: umuttopalak/pythonanywhere-deploy-action@v1.1.0
         with:
-          host: 'www.pythonanywhere.com' or 'www.eu.pythonanywhere.com'
+          host: 'www.pythonanywhere.com'
           username: ${{ secrets.USERNAME }}
           api_token: ${{ secrets.API_TOKEN }}
           domain_name: ${{ secrets.DOMAIN_NAME }}
