--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
           # Agregar un paso para ejecutar git pull con opciones adicionales
           run: |
             cd $WORKING_DIRECTORY
-            git pull
-#            git fetch
-#            git merge origin/main  # O la rama que corresponda
+#            git pull
+            git fetch
+            git merge origin/main  # O la rama que corresponda
